--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ p {
   border: none;
   font-weight: 300; }
 
+@media screen and (max-width: 768px) {
+  .mobile-center {
+    text-align: center; } }
+
 body {
   font-family: "Open Sans", sans-serif; }
   body .main_page {
@@ -98,40 +102,34 @@ body {
         padding-top: 30px; }
         @media screen and (max-width: 740px) {
           body .main_page header .navbar-default .navbar-collapse {
-            background-color: rgba(38, 41, 49, 0.8);
+            background-color: rgba(38, 41, 49, 0.9);
             border-color: #262931; } }
-        body .main_page header .navbar-default .button-rounded {
+        body .main_page header .navbar-default li {
           padding-top: 7px;
           padding-bottom: 7px; }
-          body .main_page header .navbar-default .button-rounded a {
-            border: 1px solid white;
+          body .main_page header .navbar-default li a {
+            font-size: 16px;
+            color: white;
+            text-shadow: none;
+            border: 1px solid transparent;
             border-radius: 50px;
-            padding: 8px 20px;
-            text-shadow: none; }
-            body .main_page header .navbar-default .button-rounded a:hover {
-              border: 1px solid #19bd9a;
-              color: #19bd9a; }
-              @media screen and (max-width: 414px) {
-                body .main_page header .navbar-default .button-rounded a:hover {
+            padding: 8px 18px; }
+            @media screen and (max-width: 823px) {
+              body .main_page header .navbar-default li a {
+                padding: 8px 15px; } }
+            body .main_page header .navbar-default li a:hover {
+              border: 1px solid white;
+              color: white; }
+              @media screen and (max-width: 768px) {
+                body .main_page header .navbar-default li a:hover {
                   border: none; } }
-            body .main_page header .navbar-default .button-rounded a:focus {
-              border: 1px solid #19bd9a; }
-            @media screen and (max-width: 414px) {
-              body .main_page header .navbar-default .button-rounded a {
-                border: none; } }
-        body .main_page header .navbar-default li a {
-          font-size: 16px;
-          color: white;
-          text-shadow: none; }
-          body .main_page header .navbar-default li a:hover {
-            color: #19bd9a; }
-          body .main_page header .navbar-default li a:focus {
-            color: #19bd9a; }
+            body .main_page header .navbar-default li a:focus {
+              color: white; }
       body .main_page header .navbar-toggle {
         border: none; }
         body .main_page header .navbar-toggle .icon-bar {
           background-color: white; }
-        body .main_page header .navbar-toggle:focus {
+        body .main_page header .navbar-toggle:focus, body .main_page header .navbar-toggle:hover {
           background-color: transparent; }
     body .main_page .main-screen {
       align-content: center;
@@ -511,15 +509,18 @@ body {
     margin-top: 20px; }
     .team .person-name .f-14 {
       font-size: 14px; }
-    .team .person-name:after {
-      content: "";
-      background-color: #19bd9a;
-      height: 80%;
-      width: 4px;
-      display: block;
-      position: absolute;
-      top: 10%;
-      right: -40px; }
+  .team .scrollbar {
+    height: 300px;
+    overflow-y: scroll;
+    padding-right: 30px; }
+    @media screen and (max-width: 812px) {
+      .team .scrollbar {
+        margin: 15px 18px 0px; } }
+    .team .scrollbar::-webkit-scrollbar {
+      width: 6px;
+      background-color: #F5F5F5; }
+    .team .scrollbar::-webkit-scrollbar-thumb {
+      background-color: #19bd9a; }
   .team .owl-dots {
     margin-top: 30px;
     text-align: center; }
@@ -656,6 +657,10 @@ body {
     position: relative; }
     .price .offer-price:hover .price-hover {
       opacity: 1; }
+    @media screen and (max-width: 414px) {
+      .price .offer-price {
+        margin: 15px;
+        max-width: none; } }
     .price .offer-price h4 {
       display: inline-block;
       font-size: 20px;
@@ -698,8 +703,7 @@ body {
       padding-top: 26px;
       padding-bottom: 26px; }
       .price .price-hover a:hover {
-        color: #19bd9a;
-        background-color: white; }
+        color: #044548; }
 
 .subscribe {
   background-image: url("../images/blog-bg_10.jpg");
@@ -712,6 +716,9 @@ body {
   .subscribe .form-group {
     max-width: 360px;
     width: 100%; }
+    @media screen and (max-width: 414px) {
+      .subscribe .form-group {
+        max-width: none; } }
     .subscribe .form-group .form-control {
       color: white;
       width: 100%;
@@ -726,6 +733,14 @@ body {
       background-color: transparent;
       border: 1px solid #19bd9a;
       color: white; }
+    @media screen and (max-width: 768px) {
+      .subscribe .btn {
+        margin-left: 0px;
+        max-width: 360px;
+        margin-top: 16px; } }
+    @media screen and (max-width: 414px) {
+      .subscribe .btn {
+        max-width: none; } }
 
 .contact .our_contacts {
   background-color: #f3f3f3;
@@ -739,6 +754,10 @@ body {
   margin: 20px; }
   .contact .contact-info:hover img {
     filter: grayscale(0); }
+  @media screen and (max-width: 414px) {
+    .contact .contact-info {
+      margin: 20px 0px;
+      max-width: none; } }
   .contact .contact-info img {
     width: 100%;
     margin-bottom: 20px;
@@ -818,5 +837,32 @@ footer {
 
 #more {
   display: none; }
+
+.circular-chart {
+  display: block;
+  margin: 10px auto;
+  max-width: 80%;
+  max-height: 250px; }
+
+.circle-bg {
+  fill: none;
+  stroke: #046165;
+  stroke-width: 1; }
+
+.circle {
+  fill: none;
+  stroke-width: 1.8;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+  stroke: #19bd9a; }
+
+@keyframes progress {
+  0% {
+    stroke-dasharray: 0,100; } }
+.percentage {
+  fill: #81868e;
+  font-family: sans-serif;
+  font-size: 0.5em;
+  text-anchor: middle; }
 
 /*# sourceMappingURL=style.css.map */
