change hover on FEATURED PROJECTS

--- a/css/style.scss
+++ b/css/style.scss
@@ -351,8 +351,9 @@ body {
         display: block;
         height: 20px;
         position: absolute;
-        top: 50%;
-        left: 42%;
+        top: 46%;
+        left: 50%;
+        margin-left: -50px;
         z-index: 2;
       }
     }
