--- a/css/style.css
+++ b/css/style.css
@@ -290,8 +290,9 @@ body {
         display: block;
         height: 20px;
         position: absolute;
-        top: 50%;
-        left: 42%;
+        top: 46%;
+        left: 50%;
+        margin-left: -50px;
         z-index: 2; }
     .featured-pj .project-example .wide {
       width: 50%; }
